Added endgame submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "headers"]
 	path = headers
 	url = https://github.com/TisseTheTiz/zmk-config-headers
+[submodule "boards/shields/endgame"]
+	path = boards/shields/endgame
+	url = https://github.com/TisseTheTiz/zmk-config-endgame
