Bash script for building the firmware for the endgame, klotz and klor.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "boards/shields/klotz"]
 	path = boards/shields/klotz
 	url = https://github.com/TisseTheTiz/zmk-config-klotz
+[submodule "boards/shields/klor"]
+	path = boards/shields/klor
+	url = https://github.com/TisseTheTiz/zmk-config-klor
